--- a/runtracker/src/main/resources/templates/signup.html
+++ b/runtracker/src/main/resources/templates/signup.html
@@ -6,9 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/signup.css" />
 	</head>
 	<body>
-		<section>
-			
-		</section>
+		<section></section>
 		<div class="signup-container">
 			<h1>Sign Up</h1>
 			<form action="/user/signup" method="post">
